--- a/siri.client.france/pom.xml
+++ b/siri.client.france/pom.xml
@@ -77,6 +77,20 @@
 			<groupId>jline</groupId>
 			<artifactId>jline</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
