--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8</version>
 				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
 					<quiet>false</quiet>
 					<sourcepath>target/generated-sources/delombok</sourcepath>
 					<javaApiLinks>
