--- a/siri.client.france/config/dev/irys-client.properties
+++ b/siri.client.france/config/dev/irys-client.properties
@@ -10,7 +10,7 @@ proxy.port=8080
 #  general parameters
 siri.version=2.0:FR-IDF-2.4
 siri.server=http://localhost:10180/siri
-siri.requestorRef=CLient_test
+siri.requestorRef=NINOXE:default
 siri.authUser=
 siri.authPass=
 siri.requestCompression=false
