add tests on VM and ET

--- a/siri.client.france/config/dev/irys-client.properties
+++ b/siri.client.france/config/dev/irys-client.properties
@@ -30,35 +30,51 @@ siri.notifyLog=true
 
 # check response xsd validity
 siri.checkResponse=true
-# CheckStatusService request identifier prefix
+# CheckStatusService request identifier prefix and suffix
 siri.checkStatus.requestIdentifierPrefix=CheckStatus:Test:
-# GeneralMessageService request identifier prefix
+siri.checkStatus.requestIdentifierSuffix=:LOC
+# GeneralMessageService request identifier prefix and suffix
 siri.generalMessage.requestIdentifierPrefix=GeneralMessage:Test:
-# StopMonitoringService request identifier prefix
+siri.generalMessage.requestIdentifierSuffix=:LOC
+# StopMonitoringService request identifier prefix and suffix
 siri.stopMonitoring.requestIdentifierPrefix=StopMonitoring:Test:
-# VehicleMonitoringService request identifier prefix
+siri.stopMonitoring.requestIdentifierSuffix=:LOC
+# VehicleMonitoringService request identifier prefix and suffix
 siri.vehicleMonitoring.requestIdentifierPrefix=VehicleMonitoring:Test:
-# DiscoveryService request identifier prefix
+siri.vehicleMonitoring.requestIdentifierSuffix=:LOC
+# DiscoveryService request identifier prefix and suffix
 siri.discovery.requestIdentifierPrefix=Discovery:Test:
-# DataSupplyService request identifier prefix
+siri.discovery.requestIdentifierSuffix=:LOC
+# DataSupplyService request identifier prefix and suffix
 siri.dataSupply.requestIdentifierPrefix=DataSupply:Test:
-# CapabilitiesService request identifier prefix
+siri.dataSupply.requestIdentifierSuffix=:LOC
+# CapabilitiesService request identifier prefix and suffix
 siri.capabilities.requestIdentifierPrefix=Capabilities:Test:
-# ConnectionMonitoringService request identifier prefix
+siri.capabilities.requestIdentifierSuffix=:LOC
+# ConnectionMonitoringService request identifier prefix and suffix
 siri.connectionMonitoring.requestIdentifierPrefix=ConnectionMonitoring:Test:
-# ConnectionTimetableService request identifier prefix
+siri.connectionMonitoring.requestIdentifierSuffix=:LOC
+# ConnectionTimetableService request identifier prefix and suffix
 siri.connectionTimetable.requestIdentifierPrefix=ConnectionTimetable:Test:
-# EstimatedTimetableService request identifier prefix
+siri.connectionTimetable.requestIdentifierSuffix=:LOC
+# EstimatedTimetableService request identifier prefix and suffix
 siri.estimatedTimetable.requestIdentifierPrefix=EstimatedTimetable:Test:
-# FacilityMonitoringService request identifier prefix
+siri.estimatedTimetable.requestIdentifierSuffix=:LOC
+# FacilityMonitoringService request identifier prefix and suffix
 siri.facilityMonitoring.requestIdentifierPrefix=FacilityMonitoring:Test:
-# ProductionTimetableService request identifier prefix
+siri.facilityMonitoring.requestIdentifierSuffix=:LOC
+# ProductionTimetableService request identifier prefix and suffix
 siri.productionTimetable.requestIdentifierPrefix=ProductionTimetable:Test:
-# StopTimetableService request identifier prefix
+siri.productionTimetable.requestIdentifierSuffix=:LOC
+# StopTimetableService request identifier prefix and suffix
 siri.stopTimetable.requestIdentifierPrefix=StopTimetable:Test:
-# SituationExchangeService request identifier prefix
+siri.stopTimetable.requestIdentifierSuffix=:LOC
+# SituationExchangeService request identifier prefix and suffix
 siri.situationExchange.requestIdentifierPrefix=SituationExchange:Test:
-# SubscriptionService request identifier prefix
+siri.situationExchange.requestIdentifierSuffix=:LOC
+# SubscriptionService request identifier prefix and suffix
 siri.subscription.requestIdentifierPrefix=Subscription:Test:
+siri.subscription.requestIdentifierSuffix=:LOC
 siri.subscription.subscriptionIdentifierPrefix=CLI_TEST:Subscription:
+siri.subscription.subscriptionIdentifierSuffix=:LOC
 
